--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ body {
   font-size: 14px;
   line-height: 16px;
   letter-spacing: 0.02em;
+  border: 1px solid transparent;
 }
 
 .box {
@@ -114,10 +115,6 @@ body {
   color: var(--brand-color);
 }
 
-.line {
-  border: 1px solid;
-  color: #ececec;
-}
 
 .primary {
   background-color: var(--bg-color);
