--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ header {
   max-width: 1200px;
   margin: 0 auto;
   padding: 0;
-  /* outline: 1px dotted darkgray; */
+  outline: 1px dotted darkgray;
 }
 
 .menu-box {
@@ -82,6 +82,7 @@ header {
   line-height: 1.14;
   letter-spacing: 0.02em;
   background-color: var(--white-color);
+  padding-left: 93px;
 }
 
 .menu.menu-nav {
@@ -93,9 +94,7 @@ header {
   color: var(--text-color);
   padding-right: 46px;
 }
-.box:first-child {
-  padding-left: 93px;
-}
+
 
 .menu-nav:hover {
   color: var(--brand-color);
@@ -160,7 +159,6 @@ header {
 /*tekst*/
 .feature {
   display: flex;
-  justify-content: flex-start;
   gap: 30px;
 }
 
