--- a/css/style.css
+++ b/css/style.css
@@ -37,12 +37,13 @@ header {
 
 .list {
   list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 .container {
   max-width: 1200px;
   margin: 0 auto;
   padding: 0;
-  outline: 1px dotted darkgray;
 }
 
 .menu-box {
@@ -95,7 +96,6 @@ header {
   padding-right: 46px;
 }
 
-
 .menu-nav:hover {
   color: var(--brand-color);
 }
@@ -119,11 +119,11 @@ header {
 .menu-phone:hover {
   color: var(--brand-color);
 }
-
 .primary {
   background-color: var(--bg-color);
   text-align: center;
-  height: 600px;
+  padding-top: 200px;
+  padding-bottom: 280px;
   border: 1px solid transparent;
 }
 .primary-title {
@@ -132,8 +132,11 @@ header {
   line-height: 1.36;
   text-transform: uppercase;
   color: var(--white-color);
-  padding: 200px 452px 30px;
+  padding-left: 452px;
+  padding-right: 452px;
+  padding-bottom: 30px;
   letter-spacing: 0.06em;
+  text-align: center;
 }
 .primary-bg {
   font-family: inherit;
@@ -160,6 +163,8 @@ header {
 .feature {
   display: flex;
   gap: 30px;
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 .feature-title {
