--- a/css/style.css
+++ b/css/style.css
@@ -208,6 +208,7 @@ header {
   line-height: 1.18;
   letter-spacing: 0.03em;
   color: var(--text-color);
+  padding-left: 24px;
 }
 .team-job,
 .portfolio-job {
@@ -215,6 +216,7 @@ header {
   line-height: 1.18;
   letter-spacing: 0.03em;
   color: var(--p-color);
+  padding-left: 24px;
 }
 
 /*stopka*/
